control follow refactor

--- a/projects/handset/src/app/login/login/login.component.html
+++ b/projects/handset/src/app/login/login/login.component.html
@@ -10,19 +10,23 @@
           <input name="username" matInput type="text" placeholder="用户名"
             [(ngModel)]="model.userName" required #username="ngModel"
             autocomplete="username" />
-          <button mat-icon-button *ngIf="model.userName" matSuffix aria-label="Clear"
-            (click)="model.userName = ''">
-            <mat-icon>close</mat-icon>
-          </button>
+          @if (model.userName) {
+            <button mat-icon-button matSuffix aria-label="Clear"
+              (click)="model.userName = ''">
+              <mat-icon>close</mat-icon>
+            </button>
+          }
         </mat-form-field>
         <mat-form-field class="form-field">
           <input name="password" matInput type="password" placeholder="密码"
             [(ngModel)]="model.password" required #password="ngModel"
             autocomplete="current-password"/>
-          <button mat-icon-button *ngIf="model.password" matSuffix aria-label="Clear"
-            (click)="model.password = ''">
-            <mat-icon>close</mat-icon>
-          </button>
+          @if (model.password) {
+            <button mat-icon-button matSuffix aria-label="Clear"
+              (click)="model.password = ''">
+              <mat-icon>close</mat-icon>
+            </button>
+          }
         </mat-form-field>
         <div class="form-field">
           <mat-checkbox name="isPersistent" [(ngModel)]="model.isPersistent">
@@ -32,12 +36,14 @@
         <button class="login-button" type="button" mat-raised-button color="primary"
           (click)="login()" [disabled]="(username.invalid || password.invalid)"
           cdkFocusInitial>
-          <ng-container *ngIf="loading;else loginTpl">
-            <mat-icon class="mat-icon-spinner">refresh</mat-icon> 登录中 ...
-          </ng-container>
-          <ng-template #loginTpl>
+          @if (loading) {
+            <ng-container>
+              <mat-icon class="mat-icon-spinner">refresh</mat-icon> 登录中 ...
+            </ng-container>
+          }
+          @else {
             登录
-          </ng-template>
+          }
         </button>
       </form>
     </div>
