--- a/projects/web/src/app/account/user-info/user-info.component.html
+++ b/projects/web/src/app/account/user-info/user-info.component.html
@@ -85,10 +85,12 @@
       </div>
       <div class="row">
         <div class="col d-flex justify-content-end">
-          <div class="me-auto" *ngIf="loading">
-            <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin" />
-            {{loadingMessage}}
-          </div>
+          @if (loading) {
+            <div class="me-auto">
+              <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin" />
+              {{loadingMessage}}
+            </div>
+          }
           <button type="button" nz-button nzType="primary"
             (click)="saveUser()" [disabled]="!detailForm.valid || loading">
             <svg-icon class="me-1" iconPath="bi/check" /> 保存
@@ -146,10 +148,12 @@
       </div>
       <div class="row">
         <div class="col d-flex justify-content-end">
-          <div class="me-auto" *ngIf="updatingPwd">
-            <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin" />
-            正在修改密码 ...
-          </div>
+          @if (updatingPwd) {
+            <div class="me-auto">
+              <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin" />
+              正在修改密码 ...
+            </div>
+          }
           <button type="button" nz-button nzType="primary"
             (click)="changePassword()" [disabled]="!pwdForm.valid || updatingPwd">
             <svg-icon class="me-1" iconPath="bi/check" /> 保存
