--- a/projects/web/src/app/admin/privileges/list/list.component.html
+++ b/projects/web/src/app/admin/privileges/list/list.component.html
@@ -1,25 +1,25 @@
+@let user = account.currentUser();
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-      <nz-card *ngIf="(account.info | async) as info"
-        class="ant-card-data-list" nzTitle="权限管理" [nzExtra]="cardExtra">
+      <nz-card class="ant-card-data-list" nzTitle="权限管理" [nzExtra]="cardExtra">
         <ng-template #cardExtra>
           <form nz-form>
             <nz-space>
               <nz-select *nzSpaceItem name="module" style="width: 200px;"
-                [(ngModel)]="vm.searchModel.module"
-                (ngModelChange)="loadData({})">
+                [(ngModel)]="vm.searchModel.module" (ngModelChange)="loadData({})">
                 <nz-option nzLabel="全部模块" nzValue=""></nz-option>
-                <nz-option *ngFor="let m of vm.modules | async"
-                  [nzValue]="m" [nzLabel]="m">
-                </nz-option>
+                @for (m of vm.modules | async; track m;) {
+                  <nz-option [nzValue]="m" [nzLabel]="m" />
+                }
               </nz-select>
               <nz-button-group *nzSpaceItem>
-                <button *ngIf="info.privileges['app_privileges.create']"
-                  type="button" nz-button nzType="primary"
-                  (click)="showDetail('0', true)">
-                  <svg-icon class="me-1" iconPath="bi/plus" /> 新建系统权限
-                </button>
+                @if (user.privileges['app_privileges.create']) {
+                  <button type="button" nz-button nzType="primary"
+                    (click)="showDetail('0', true)">
+                    <svg-icon class="me-1" iconPath="bi/plus" /> 新建系统权限
+                  </button>
+                }
                 <button type="button" nz-button nzType="default"
                   (click)="loadData({})">
                   <svg-icon class="me-1" iconPath="bi/arrow-repeat" /> 刷新
@@ -28,31 +28,32 @@
             </nz-space>
           </form>
         </ng-template>
-        <ng-container *ngIf="(vm.data | async) as data">
-          <nz-table nzSize="small" [nzFrontPagination]="false"
-            [nzShowSizeChanger]="true"
-            [nzShowPagination]="true"
-            [nzShowQuickJumper]="true"
-            [nzData]="data"
-            [nzTotal]="(vm.total | async)!"
-            [nzShowTotal]="totalTpl"
-            [nzLoading]="vm.loading"
-            [nzPageIndex]="vm.pageIndex"
-            [nzPageSize]="vm.pageSize"
-            [nzPageSizeOptions]="vm.pageSizeOptions"
-            (nzQueryParams)="loadData($event)">
-            <thead>
-              <tr class="sticky-top">
-                <th scope="col" class="text-end text-nowrap table-row-num-col">#</th>
-                <th scope="col" class="text-start text-nowrap">权限模块</th>
-                <th scope="col" class="text-start text-nowrap">权限名称</th>
-                <th scope="col" class="text-start text-nowrap">权限描述</th>
-                <th scope="col" class="text-center text-nowrap">是否必须</th>
-                <th scope="col" class="text-center text-nowrap table-action-col-3">操作</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of data; let i = index;">
+        @let data = (vm.data | async)!;
+        <nz-table nzSize="small" [nzFrontPagination]="false"
+          [nzShowSizeChanger]="true"
+          [nzShowPagination]="true"
+          [nzShowQuickJumper]="true"
+          [nzData]="data"
+          [nzTotal]="(vm.total | async)!"
+          [nzShowTotal]="totalTpl"
+          [nzLoading]="vm.loading"
+          [nzPageIndex]="vm.pageIndex"
+          [nzPageSize]="vm.pageSize"
+          [nzPageSizeOptions]="vm.pageSizeOptions"
+          (nzQueryParams)="loadData($event)">
+          <thead>
+            <tr class="sticky-top">
+              <th scope="col" class="text-end text-nowrap table-row-num-col">#</th>
+              <th scope="col" class="text-start text-nowrap">权限模块</th>
+              <th scope="col" class="text-start text-nowrap">权限名称</th>
+              <th scope="col" class="text-start text-nowrap">权限描述</th>
+              <th scope="col" class="text-center text-nowrap">是否必须</th>
+              <th scope="col" class="text-center text-nowrap table-action-col-3">操作</th>
+            </tr>
+          </thead>
+          <tbody>
+            @for (item of data; track item.id; let i = $index;) {
+              <tr>
                 <th scope="row" class="text-end">{{i+1+vm.searchModel.skip}}</th>
                 <td class="text-start">{{item.module}}</td>
                 <td class="text-start">{{item.name}}</td>
@@ -60,28 +61,30 @@
                 <td class="text-center" [class.text-danger]="item.isRequired">{{item.isRequired ? '是' : '否'}}</td>
                 <td class="text-center">
                   <nz-button-group>
-                    <button *ngIf="info.privileges['app_privileges.read']"
-                      class="px-2" type="button" nz-button nzType="default"
-                      nz-tooltip="详情" (click)="showDetail(item.id, false)">
-                      <svg-icon iconPath="bi/info-square" />
-                    </button>
-                    <button *ngIf="info.privileges['app_privileges.update']"
-                      class="px-2" type="button" nz-button nzType="default"
-                      nz-tooltip="编辑" (click)="showDetail(item.id, true)">
-                      <svg-icon iconPath="bi/pencil-square" />
-                    </button>
-                    <button *ngIf="info.privileges['app_privileges.delete']"
-                      class="px-2" type="button" nz-button nzType="default"
-                      nz-tooltip="删除"
-                      (click)="delete(item.id)">
-                      <svg-icon iconPath="bi/trash" />
-                    </button>
+                    @if (user.privileges['app_privileges.read_by_id']) {
+                      <button class="px-2" type="button" nz-button nzType="default"
+                        nz-tooltip="详情" (click)="showDetail(item.id, false)">
+                        <svg-icon iconPath="bi/info-square" />
+                      </button>
+                    }
+                    @if (user.privileges['app_privileges.update']) {
+                      <button class="px-2" type="button" nz-button nzType="default"
+                        nz-tooltip="编辑" (click)="showDetail(item.id, true)">
+                        <svg-icon iconPath="bi/pencil-square" />
+                      </button>
+                    }
+                    @if (user.privileges['app_privileges.delete']) {
+                      <button class="px-2" type="button" nz-button nzType="default"
+                        nz-tooltip="删除" (click)="delete(item.id)">
+                        <svg-icon iconPath="bi/trash" />
+                      </button>
+                    }
                   </nz-button-group>
                 </td>
               </tr>
-            </tbody>
-          </nz-table>
-        </ng-container>
+            }
+          </tbody>
+        </nz-table>
       </nz-card>
       <ng-template #totalTpl let-total let-range="range">
         当前显示 {{total}} 条记录中的第 {{range[0]}} 至 {{range[1]}} 条
