--- a/projects/handset/src/app/nav-menu/nav-menu.component.html
+++ b/projects/handset/src/app/nav-menu/nav-menu.component.html
@@ -12,9 +12,10 @@
   <button mat-menu-item (click)="logout()">注销</button>
 </mat-menu>
 <mat-nav-list>
-  <a mat-list-item *ngFor="let item of vm.menuItems | async"
-    (click)="toggleDrawer()" [routerLink]="item.link">
-    <mat-icon class="me-3" matListItemIcon>{{item.icon}}</mat-icon>
-    <div>{{item.text}}</div>
-  </a>
+  @for (item of vm.menuItems | async; track item.link) {
+    <a mat-list-item (click)="toggleDrawer()" [routerLink]="item.link">
+      <mat-icon class="me-3" matListItemIcon>{{item.icon}}</mat-icon>
+      <div>{{item.text}}</div>
+    </a>
+  }
 </mat-nav-list>
