--- a/projects/web/src/app/admin/audit-logs/list/list.component.html
+++ b/projects/web/src/app/admin/audit-logs/list/list.component.html
@@ -18,11 +18,11 @@
                   (keyup.enter)="onUserNameChanged()"
                 />
                 <ng-template #userNameAddOnTpl>
-                  <button *ngIf="vm.searchModel.userName"
-                    class="px-2" type="button" nz-button nzType="default"
-                    (click)="resetUsername()">
-                    <svg-icon iconPath="bi/x" />
-                  </button>
+                  @if (vm.searchModel.userName) {
+                    <button class="px-2" type="button" nz-button nzType="default" (click)="resetUsername()">
+                      <svg-icon iconPath="bi/x" />
+                    </button>
+                  }
                   <button class="px-2" type="button" nz-button nzType="default" nzSearch (click)="vm.search()">
                     <svg-icon iconPath="bi/search" />
                   </button>
@@ -37,37 +37,38 @@
             </nz-space>
           </form>
         </ng-template>
-        <ng-container *ngIf="(vm.data | async) as data">
-          <nz-table nzSize="small" [nzFrontPagination]="false"
-            [nzShowSizeChanger]="true"
-            [nzShowPagination]="true"
-            [nzShowQuickJumper]="true"
-            [nzData]="data"
-            [nzTotal]="(vm.total | async)!"
-            [nzShowTotal]="totalTpl"
-            [nzLoading]="vm.loading"
-            [nzPageIndex]="vm.pageIndex"
-            [nzPageSize]="vm.pageSize"
-            [nzPageSizeOptions]="vm.pageSizeOptions"
-            (nzQueryParams)="loadData($event)">
-            <thead>
-              <tr class="sticky-top">
-                <th scope="col" class="text-end text-nowrap border-left-0">#</th>
-                <th scope="col" class="text-start text-nowrap">IP地址</th>
-                <th scope="col" class="text-start text-nowrap">主机名</th>
-                <th scope="col" class="text-start text-nowrap">请求地址</th>
-                <th scope="col" class="text-center text-nowrap">请求方法</th>
-                <th scope="col" class="text-center text-nowrap">用户名</th>
-                <th scope="col" class="text-center text-nowrap">开始时间</th>
-                <th scope="col" class="text-end text-nowrap">耗时</th>
-                <th scope="col" class="text-end text-nowrap">响应代码</th>
-                <th scope="col" class="text-start text-nowrap">控制器</th>
-                <th scope="col" class="text-start text-nowrap">动作名称</th>
-                <th scope="col" class="text-start text-nowrap">说明</th>
-              </tr>
-            </thead>
-            <tbody *ngIf="(vm.data | async) as data">
-              <tr *ngFor="let item of data; let i = index;">
+        @let data = (vm.data | async)!;
+        <nz-table nzSize="small" [nzFrontPagination]="false"
+          [nzShowSizeChanger]="true"
+          [nzShowPagination]="true"
+          [nzShowQuickJumper]="true"
+          [nzData]="data"
+          [nzTotal]="(vm.total | async)!"
+          [nzShowTotal]="totalTpl"
+          [nzLoading]="vm.loading"
+          [nzPageIndex]="vm.pageIndex"
+          [nzPageSize]="vm.pageSize"
+          [nzPageSizeOptions]="vm.pageSizeOptions"
+          (nzQueryParams)="loadData($event)">
+          <thead>
+            <tr class="sticky-top">
+              <th scope="col" class="text-end text-nowrap border-left-0">#</th>
+              <th scope="col" class="text-start text-nowrap">IP地址</th>
+              <th scope="col" class="text-start text-nowrap">主机名</th>
+              <th scope="col" class="text-start text-nowrap">请求地址</th>
+              <th scope="col" class="text-center text-nowrap">请求方法</th>
+              <th scope="col" class="text-center text-nowrap">用户名</th>
+              <th scope="col" class="text-center text-nowrap">开始时间</th>
+              <th scope="col" class="text-end text-nowrap">耗时</th>
+              <th scope="col" class="text-end text-nowrap">响应代码</th>
+              <th scope="col" class="text-start text-nowrap">控制器</th>
+              <th scope="col" class="text-start text-nowrap">动作名称</th>
+              <th scope="col" class="text-start text-nowrap">说明</th>
+            </tr>
+          </thead>
+          <tbody>
+            @for (item of data; track $index; let i = $index;) {
+              <tr>
                 <th scope="row" class="text-end">{{i+1+vm.searchModel.skip}}</th>
                 <td class="text-start">{{item.ip}}</td>
                 <td class="text-start">{{item.hostName}}</td>
@@ -81,9 +82,9 @@
                 <td class="text-start">{{item.actionName}}</td>
                 <td class="text-start">{{item.description}}</td>
               </tr>
-            </tbody>
-          </nz-table>
-        </ng-container>
+            }
+          </tbody>
+        </nz-table>
       </nz-card>
       <ng-template #totalTpl let-total let-range="range">
         当前显示 {{total}} 条记录中的第 {{range[0]}} 至 {{range[1]}} 条
