--- a/projects/web/src/app/admin/privileges/detail/detail.component.html
+++ b/projects/web/src/app/admin/privileges/detail/detail.component.html
@@ -1,14 +1,14 @@
-<nz-card *ngIf="(account.info | async) as info"
-  class="ant-card-data-detail m-0"
-  [nzTitle]="title" [nzExtra]="toolsTpl"
+@let user = account.currentUser();
+<nz-card class="ant-card-data-detail m-0" [nzTitle]="title" [nzExtra]="toolsTpl"
   [nzActions]="editable ? [okTpl, cancelTpl] : []">
   <ng-template #toolsTpl>
     <nz-button-group>
-      <button *ngIf="info.privileges['app_privileges.update'] && editable"
-        type="button" nz-button nzType="primary"
-        (click)="save()" [disabled]="!detailForm.valid">
-        <svg-icon class="me-1" iconPath="bi/check" /> 保存
-      </button>
+      @if (user.privileges['app_privileges.update'] && editable) {
+        <button type="button" nz-button nzType="primary"
+          (click)="save()" [disabled]="!detailForm.valid">
+          <svg-icon class="me-1" iconPath="bi/check" /> 保存
+        </button>
+      }
       <button type="button" nz-button nzType="default" (click)="cancel()">
         <svg-icon class="me-1" iconPath="bi/x" /> 取消
       </button>
@@ -54,15 +54,15 @@
     </nz-form-item>
   </form>
   <ng-template #okTpl>
-    <button *ngIf="info.privileges['app_privileges.update'] && editable"
-      class="float-start ms-4" type="button" nz-button nzType="primary"
-      (click)="save()" [disabled]="!detailForm.valid">
-      <svg-icon class="me-1" iconPath="bi/check" /> 保存
-    </button>
+    @if (user.privileges['app_privileges.update'] && editable) {
+      <button class="float-start ms-4" type="button" nz-button nzType="primary"
+        (click)="save()" [disabled]="!detailForm.valid">
+        <svg-icon class="me-1" iconPath="bi/check" /> 保存
+      </button>
+    }
   </ng-template>
   <ng-template #cancelTpl>
-    <button class="float-end me-4" type="button" nz-button nzType="default"
-      (click)="cancel()">
+    <button class="float-end me-4" type="button" nz-button nzType="default" (click)="cancel()">
       <svg-icon class="me-1" iconPath="bi/x" /> 取消
     </button>
   </ng-template>
