--- a/projects/web/src/app/home/home/home.component.html
+++ b/projects/web/src/app/home/home/home.component.html
@@ -7,8 +7,10 @@
     </button>
   </div>
 
-  <div *ngIf="(vm.info | async) as info" class="alert alert-warning mt-3">
-    {{info}}
-  </div>
+  @if (vm.info | async; as info) {
+    <div class="alert alert-warning mt-3">
+      {{info}}
+    </div>
+  }
 
 </div>
